--- a/movies-imdb/public/index.html
+++ b/movies-imdb/public/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="A Web App Which Can Show Movies with The API." />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="shortcut icon" href="Movies-Favicon.jpg" type="image/x-icon">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <title>Danial's Movies App</title>
 </head>
 
