Refactoring The MoviePage

--- a/movies-imdb/public/index.html
+++ b/movies-imdb/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="A Web App Which Can Show Movies with The API." />
+  <meta name="description" content="A Web App Which the Client can see Movies and its details via API." />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="shortcut icon" href="Movies-Favicon.jpg" type="image/x-icon">
   <link href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" rel="stylesheet">
